# logica

./: .gitignore  astro.config.mjs  bun.lockb  package.json  pnpm-lock.yaml
.github/workflows/: pages.yml
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Board.astro  gate.ts
src/layouts/: Layout.astro
src/pages/: index.astro
