[package]
name = "logica"
version = "0.1.0"
description = "A logic circuit simulator"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
license = "MIT OR Apache-2.0 OR Zlib"
repository = ""
default-run = "logica"
edition = "2021"
rust-version = "1.73"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true
# panic = "abort"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
