[package]
name = "logica"
version = "0.1.0"
description = "A logic circuit simulator"
authors = ["Matilde Morrone <contact@morrone.dev>"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true
# panic = "abort"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
